# nutri-verify

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: NutriVerify.sln
src/NutriVerify.Api/: NutriVerify.Api.csproj  NutriVerify.Api.http  Program.cs
src/NutriVerify.Api/Controller/: HealthController.cs  ResearchController.cs
src/NutriVerify.Api/Properties/: launchSettings.json
src/NutriVerify.Core/: Class1.cs
src/NutriVerify.Data/: Class1.cs  NutriVerify.Data.csproj
src/python/: pubmed_connector.py  requirements.dev.txt  requirements.txt
src/python/analysis/: study_analyzer.py
src/python/analysis/schema/: study_analysis_schema.json
src/python/ingestion/connectors/: pubmed.py
tests/: api-tests.http  example-study-analysis.json  study_analysis.json  test_pubmed_connector.py
tests/notebooks/: pubmed_explorer.ipynb  pubmed_fetcher.py
tests/python/ingestion/test_connectors/: test_pubmed.py
