[tool.poetry]
name = "nutriverify-services"
version = "0.1.0"
description = "Python services for NutriVerify platform"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
httpx = "^0.25.0"
pydantic = "^2.4"
python-dotenv = "^1.0.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
black = "^23.9"
isort = "^5.12"
mypy = "^1.6"
pylint = "^3.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"